<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:padding="@dimen/paddingGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_artista"
            android:textSize="@dimen/tamanioLetra"
            android:padding="@dimen/paddingGeneral"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            />
        <EditText
            android:id="@+id/artista_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artista"
            android:textSize="@dimen/tamanioLetra"
            android:inputType="text"
            android:padding="@dimen/paddingGeneral"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/paddingGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha de Evento"
            android:textSize="@dimen/tamanioLetra"
            android:padding="@dimen/paddingGeneral"
            android:background="@color/colorPrimary"
            android:textColor="@color/icons"
            />
        <EditText
            android:id="@+id/fecha_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:padding="@dimen/paddingGeneral"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="1"
                />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingGeneral"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genero_musical"
            android:textSize="@dimen/tamanioLetra"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            android:padding="@dimen/paddingGeneral"
            />
        <Spinner
            android:id="@+id/spGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingGeneral">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingGeneral"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_de_entrada"
            android:textSize="@dimen/tamanioLetra"
            android:background="@color/colorPrimary"
            android:textColor="@color/icons"
            android:padding="@dimen/paddingGeneral"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/entrada_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="@dimen/paddingGeneral"
            android:textSize="@dimen/tamanioLetra"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingGeneral"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calificacion"
            android:textSize="@dimen/tamanioLetra"
            android:background="@color/colorAccent"
            android:textColor="@color/icons"
            android:padding="@dimen/paddingGeneral"
            android:layout_weight="1"
            />
        <Spinner
            android:id="@+id/spCalificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingGeneral"
            android:layout_weight="1">

        </Spinner>
    </LinearLayout>|
    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registar"
        android:textSize="@dimen/tamanioLetra"
        android:padding="@dimen/paddingGeneral"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/paddingGeneral">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/registroLV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
